fixed examples, added tests for cross product

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -117,7 +117,7 @@
 		</div>
 	</body>
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="../dist/kombinatoricsjs.es5.js"></script>
+		<script type="text/javascript" src="../dist/kombinatoricsjs.umd.js"></script>
 		<script src="examples.js"></script>
 	
 </html>
