--- a/examples/examples.html
+++ b/examples/examples.html
@@ -118,6 +118,6 @@
 	</body>
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src="../dist/kombinatoricsjs.umd.js"></script>
-		<script src="examples.js"></script>
-	
+		<!--<script src="examples.js"></script> -->
+
 </html>
